--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ label {
     display: block;
     margin-bottom: 0.5em;
     padding-left: 0.5em;
+    font-size: 20px;
 }
 
 input[type="number"] {
@@ -20,19 +21,12 @@ button {
     font-size: 1em;
 }
 
-.slider-container {
-    width: 100%;
-    height: 10px;
-    position: relative;
-    margin-bottom: 20px;
-}
-
 .slider {
     -webkit-appearance: none;
     appearance: none;
     width: 100%;
     height: 15px;
-    background: linear-gradient(to right, blue, red);
+    background: linear-gradient(to right, rgb(0, 132, 255), rgb(255, 61, 61));
     outline: none;
     top: 0;
     left: 0;
